--- a/src/main/resources/templates/basic/item.html
+++ b/src/main/resources/templates/basic/item.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}"
-            href="../../static/css/bootstrap.min.css" rel="stylesheet">
+          href="../../static/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .container
         {
@@ -16,6 +16,8 @@
     <div class="py-5 text-center">
         <h2>상품 상세</h2>
     </div>
+    <!--추가-->
+    <h2 th:if="${param.status}" th:text="'저장 완료'"></h2>
     <div>
         <label for="itemId">상품 ID</label>
         <input type="text" id="itemId" name="itemId" class="form-control"
